# ScandiReddit

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  makefile  pyproject.toml
.github/workflows/: docs.yaml
src/scandi_reddit/: __init__.py  build.py  cli.py  deduplication.py  download.py  filter.py  language_filter.py  postprocess.py  utils.py
